fix: add productCard style to listProducts

--- a/src/components/listProducts/style.css
+++ b/src/components/listProducts/style.css
@@ -3,6 +3,15 @@
   padding: 1rem;
   align-items: center;
 }
+.productCard {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #0000005d;
+  border-radius: .4rem;
+  width: 18rem;
+  margin: 1rem;
+  padding: 1rem;
+}
 .currencyInput:read-only {
   border: 0;
 }
