--- a/src/components/cart/style.css
+++ b/src/components/cart/style.css
@@ -1,3 +1,22 @@
+.cart {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
 .currencyInput:read-only {
   border: 0;
+}
+
+.cartContainer {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem;
+}
+
+.total {
+  display: flex;
+  width: 15rem;
+  margin: 1rem;
+  justify-content: space-between;
+  align-self: flex-end;
 }
